--- a/src/main/config/benchmark/simple_funeq.yaml
+++ b/src/main/config/benchmark/simple_funeq.yaml
@@ -6,9 +6,9 @@ few_shot_metadata_filename_for_retrieval:
 dfs_data_path_for_retrieval:
 dfs_metadata_filename_for_retrieval:
 datasets:
-  - project: data/benchmarks/miniF2F
+  - project: data/benchmarks/FunEq
     files:
-      - path: lean/src/test.lean
+      - path: src/dataset.lean
         theorems:
           - simple_funeq_1
           - simple_funeq_2
