--- a/src/main/config/eval_settings/n_4_few_llama.yaml
+++ b/src/main/config/eval_settings/n_4_few_llama.yaml
@@ -1,23 +1,23 @@
-name: n_60_dfs_gpt4_128k
+name: n_4_few_llama
 setting_type: Agent
 use_hammer: ALLOW
 max_proof_depth: 100
-timeout_in_secs: 60 # coq tactic execution timeout
+timeout_in_secs: 60
 proof_retries: 1
-# main_prompt: data/prompts/system/coq-proof-agent-with-dfs-always-retrieve.md
-# conv_prompt: data/prompts/conversation/coq-proof-agent-example-long-conv-dfs-always-retrieve.md
-max_tokens_per_action: 300
+# main_prompt: data/prompts/baseline/simple-prompt.md
+# conv_prompt: data/prompts/baseline/simple-prompt-conv.md
+max_tokens_per_action: 1000
 max_theorems_in_prompt: 7
-gpt_model_name: gpt-4-1106-preview
+gpt_model_name: meta/meta-llama-3-70b-instruct
 max_number_of_episodes: 1
-max_steps_per_episode: 60
+max_steps_per_episode: 4
 render: False
 checkpoint_dir: .log/checkpoints
 should_checkpoint: False
 temperature: 0.0
 max_history_messages: 0
-policy_name: Dfs
-proof_dump_dir: .log/proofs/eval_driver/dfs
+policy_name: FewShot
+proof_dump_dir: .log/proofs/eval_driver/few_shot/gpt4_turbo
 use_human_readable_proof_context: True
 sample: 1.0
 sample_seed: 0xf00
